--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "An API that will allow users to search for nearby trails by location and type of trail.",
   "main": "index.js",
   "scripts": {
-    "lint": "npm run lint:pug && npm run lint:eslint",
-    "lint:pug": "./node_modules/.bin/pug-lint .",
-    "lint:eslint": "./node_modules/.bin/eslint --format codeframe .",
-    "dev": "./node_modules/.bin/nodemon server.js",
+    "dev": "concurrently \"npm:dev:server\" \"npm:dev:client\"",
+    "dev:server": "npm run dev:client:build && ./node_modules/.bin/env-cmd ./node_modules/.bin/nodemon server.js",
     "dev:migrate": "./node_modules/.bin/env-cmd ./node_modules/.bin/sequelize db:migrate --env development --config ./config/sequelize.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "dev:client": "cd client && npm start",
+    "dev:client:build": "cd client && npm run build",
+    "lint": "./node_modules/.bin/eslint --format codeframe .",
+    "lint:fix": "./node_modules/.bin/eslint --fix --format codeframe .",
+    "dev:client:test": "cd client && npm run test",
+    "dev:server:test": "./node_modules/.bin/env-cmd ./node_modules/.bin/mocha tests/**/*.test.js"
+
   },
   "repository": {
     "type": "git",
@@ -31,8 +35,9 @@
   },
   "devDependencies": {
     "chai": "^4.3.4",
+    "concurrently": "^6.3.0",
     "env-cmd": "^10.1.0",
-    "eslint": "^7.32.0",
+    "eslint": "^7.11.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.13",
     "pug-lint": "^2.6.0",
